Populate metadata rds on transfer request
