# kotlin/lambda/item-metadata-handler/src/main/kotlin/com/zenobiapay/transfermetadata/di/ItemMetadataModule.kt
@@ -1,0 +1,13 @@
+package com.zenobiapay.transfermetadata.di
+
+import dagger.Module
+import dagger.Provides
+import software.amazon.awssdk.services.secretsmanager.SecretsManagerClient
+
+@Module
+class ItemMetadataModule {
+    @Provides
+    fun provideSecretsManager(): SecretsManagerClient {
+        return SecretsManagerClient.create()
+    }
+}
