# kotlin/lambda/item-metadata-handler/src/main/kotlin/com/zenobiapay/transfermetadata/transform/ItemSchemaTransformer.kt
@@ -1,0 +1,7 @@
+package com.zenobiapay.transfermetadata.transform
+
+import com.zenobiapay.rds.model.ItemMetadataSchema
+
+interface ItemSchemaTransformer {
+    fun transform(merchantId: String, metadata: Map<String, Any>): List<ItemMetadataSchema>
+}
