# kotlin/lambda/item-metadata-handler/src/main/kotlin/com/zenobiapay/transfermetadata/transform/ShopifySchemaTransformer.kt
@@ -1,0 +1,19 @@
+package com.zenobiapay.transfermetadata.transform
+
+import com.zenobiapay.rds.model.ItemMetadataSchema
+
+class ShopifySchemaTransformer: ItemSchemaTransformer {
+    override fun transform(merchantId: String, metadata: Map<String, Any>): List<ItemMetadataSchema> {
+        val quantity = metadata["quantity"] as Int
+        return (1..quantity).map {
+            ItemMetadataSchema(
+                merchantId = merchantId,
+                metadata = metadata,
+                name = metadata["title"] as String,
+                productId = null,
+                brandId = null,
+                tags = listOf(metadata["variant"] as String)
+            )
+        }
+    }
+}
