# kotlin/lambda/transfer-metadata-handler/src/main/kotlin/com/zenobiapay/transfermetadata/di/AppComponent.kt
@@ -1,10 +1,0 @@
-package com.zenobiapay.transfertableevent.di
-
-import com.zenobiapay.di.SharedModule
-import com.zenobiapay.transfermetadata.handlers.TransferMetadataHandler
-import dagger.Component
-
-@Component(modules = [SharedModule::class])
-interface AppComponent {
-    fun inject(handler: TransferMetadataHandler)
-}
