# kotlin/shared/events/src/main/kotlin/com/zenobiapay/events/model/ItemMetadataRecord.kt
@@ -1,0 +1,8 @@
+package com.zenobiapay.events.model
+
+data class ItemMetadataRecord(
+    val merchantId: String,
+    val transferMetadata: Map<String, Any>,
+    val transferRequestId: String,
+    val itemMetadata: List<Map<String, Any>>,
+)
